--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salesforce Webform</title>
+    <title>wtv.Timesheet</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
