--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
         }
 
         button:hover {
-            background-color: #234252;
+            background-color: #70bae7;
         }
 
         @media (max-width: 768px) {
