--- a/templates/index.html
+++ b/templates/index.html
@@ -274,9 +274,126 @@
                     <option value="Marketing - ABC">Marketing - ABC</option>
                 </select>
             </div>
-            <div class="input-group" id="accountGroup" style="display:none;">
-                <label for="account">Account</label>
-                <input type="text" id="account" name="Account__c" placeholder="Account">
+            <div class="input-group" id="accountGroup">
+            <label for="account">Account</label>
+            <select name="Account__c" id="account">
+                <option value="Acciona S.A.">Acciona S.A.</option>
+                <option value="ACERINOX">ACERINOX</option>
+                <option value="African Child Policy Forum">African Child Policy Forum</option>
+                <option value="Aevis Victoria SA">Aevis Victoria SA</option>
+                <option value="Aedas Homes S.A.">Aedas Homes S.A.</option>
+                <option value="Angelini Pharma">Angelini Pharma</option>
+                <option value="Arkema">Arkema</option>
+                <option value="Arteche">Arteche</option>
+                <option value="Ashtead Group Plc">Ashtead Group Plc</option>
+                <option value="Atlantica">Atlantica</option>
+                <option value="ATRESMEDIA">ATRESMEDIA</option>
+                <option value="BBVA">BBVA</option>
+                <option value="Balfour Beatty Group Ltd">Balfour Beatty Group Ltd</option>
+                <option value="Bankinter">Bankinter</option>
+                <option value="Barry Callebaut">Barry Callebaut</option>
+                <option value="BASF Asia-Pacific Service Centre Sdn Bhd">BASF Asia-Pacific Service Centre Sdn Bhd</option>
+                <option value="beon.Worldwide">beon.Worldwide</option>
+                <option value="BP International Limited">BP International Limited</option>
+                <option value="British Land Plc">British Land Plc</option>
+                <option value="Campaign to Stop Killer Robots">Campaign to Stop Killer Robots</option>
+                <option value="Casual Films">Casual Films</option>
+                <option value="CELLNEX TELECOM">CELLNEX TELECOM</option>
+                <option value="CEPSA">CEPSA</option>
+                <option value="Cie Automotive">Cie Automotive</option>
+                <option value="CompaÃ±Ã­a De DistribuciÃ³n Integral Logista S.A.">CompaÃ±Ã­a De DistribuciÃ³n Integral Logista S.A.</option>
+                <option value="Computershare South Africa">Computershare South Africa</option>
+                <option value="Computershare UK">Computershare UK</option>
+                <option value="COMPUTERSHARE - North America">COMPUTERSHARE - North America</option>
+                <option value="Con Edison">Con Edison</option>
+                <option value="Croda International Plc">Croda International Plc</option>
+                <option value="Deloitte Asia Pacific Services Limited">Deloitte Asia Pacific Services Limited</option>
+                <option value="DK - Dorling Kindersley Limited">DK - Dorling Kindersley Limited</option>
+                <option value="Dominion">Dominion</option>
+                <option value="Dowlais Group plc">Dowlais Group plc</option>
+                <option value="EDP">EDP</option>
+                <option value="EDP-R">EDP-R</option>
+                <option value="EDT Eventos S.A.U.">EDT Eventos S.A.U.</option>
+                <option value="Elecnor">Elecnor</option>
+                <option value="Endesa S.A.">Endesa S.A.</option>
+                <option value="Enagas S.A.">Enagas S.A.</option>
+                <option value="Eroski">Eroski</option>
+                <option value="Eurocell">Eurocell</option>
+                <option value="Expedition Capital">Expedition Capital</option>
+                <option value="Ferrovial SE">Ferrovial SE</option>
+                <option value="FLUIDRA">FLUIDRA</option>
+                <option value="FundaciÃ³n Universitaria San Pablo-CEU">FundaciÃ³n Universitaria San Pablo-CEU</option>
+                <option value="Fundacion Naturgy">Fundacion Naturgy</option>
+                <option value="GLOBAL INFRASTRUCTURE PARTNERS">GLOBAL INFRASTRUCTURE PARTNERS</option>
+                <option value="Gravis Capital Management Ltd">Gravis Capital Management Ltd</option>
+                <option value="GRIFOLS">GRIFOLS</option>
+                <option value="Grupo Catalana Occidente S.A.">Grupo Catalana Occidente S.A.</option>
+                <option value="Grupo Santander">Grupo Santander</option>
+                <option value="Hang Seng Bank Limited">Hang Seng Bank Limited</option>
+                <option value="Hellman & Friedman LLC">Hellman & Friedman LLC</option>
+                <option value="HSBC Bank A.S Turkey">HSBC Bank A.S Turkey</option>
+                <option value="HSBC Bank Malaysia Berhad">HSBC Bank Malaysia Berhad</option>
+                <option value="HSBC Bank Middle East Ltd">HSBC Bank Middle East Ltd</option>
+                <option value="HSBC Bank Plc">HSBC Bank Plc</option>
+                <option value="HSBC Continental Europe S.A., Germany">HSBC Continental Europe S.A., Germany</option>
+                <option value="HSBC Electronic Data processing India Pvt Ltd">HSBC Electronic Data processing India Pvt Ltd</option>
+                <option value="HSBC France">HSBC France</option>
+                <option value="HSBC Jersey">HSBC Jersey</option>
+                <option value="HSBC Private Bank (Suisse) SA">HSBC Private Bank (Suisse) SA</option>
+                <option value="Iberdrola S.A.">Iberdrola S.A.</option>
+                <option value="Inditex S.A.">Inditex S.A.</option>
+                <option value="Indra">Indra</option>
+                <option value="Intercontinental Hotels Group Plc">Intercontinental Hotels Group Plc</option>
+                <option value="Jefferies International Limited">Jefferies International Limited</option>
+                <option value="Just Group PLC">Just Group PLC</option>
+                <option value="Keepmoat Homes Limited">Keepmoat Homes Limited</option>
+                <option value="Kollective Technology Inc">Kollective Technology Inc</option>
+                <option value="Laboratorios Reig Jofre S.A.">Laboratorios Reig Jofre S.A.</option>
+                <option value="Lar EspaÃ±a">Lar EspaÃ±a</option>
+                <option value="LDK Consultants Engineers and Planners SA,">LDK Consultants Engineers and Planners SA,</option>
+                <option value="Leonardo S.p.A.">Leonardo S.p.A.</option>
+                <option value="LIBERTAS7">LIBERTAS7</option>
+                <option value="Livingbridge Services Ltd">Livingbridge Services Ltd</option>
+                <option value="London Stock Exchange Plc.">London Stock Exchange Plc.</option>
+                <option value="Luxottica Group S.p.A">Luxottica Group S.p.A</option>
+                <option value="MeliÃ¡ Hotels International">MeliÃ¡ Hotels International</option>
+                <option value="Melrose PLC">Melrose PLC</option>
+                <option value="Merlin Properties">Merlin Properties</option>
+                <option value="Metrovacesa">Metrovacesa</option>
+                <option value="Miniland S.A">Miniland S.A</option>
+                <option value="Mobico Group PLC">Mobico Group PLC</option>
+                <option value="Montagu">Montagu</option>
+                <option value="MOTA ENGIL">MOTA ENGIL</option>
+                <option value="Mott MacDonald Group Ltd">Mott MacDonald Group Ltd</option>
+                <option value="Naturgy">Naturgy</option>
+                <option value="Naturgy Energy Group S.A.">Naturgy Energy Group S.A.</option>
+                <option value="Pennon Group Plc">Pennon Group Plc</option>
+                <option value="Pharma Mar">Pharma Mar</option>
+                <option value="Plastic Pictures">Plastic Pictures</option>
+                <option value="RWE AG">RWE AG</option>
+                <option value="Redeia CorporaciÃ³n S.A">Redeia CorporaciÃ³n S.A</option>
+                <option value="Repsol">Repsol</option>
+                <option value="Rubix">Rubix</option>
+                <option value="Sacyr">Sacyr</option>
+                <option value="ServiceNow Global">ServiceNow Global</option>
+                <option value="SFL Management ( Bermuda) Limited">SFL Management ( Bermuda) Limited</option>
+                <option value="Siemens Gamesa CorporaciÃ³n TecnolÃ³gica S.A.">Siemens Gamesa CorporaciÃ³n TecnolÃ³gica S.A.</option>
+                <option value="Solaria EnergÃ­a y Medio Ambiente">Solaria EnergÃ­a y Medio Ambiente</option>
+                <option value="Soltec EnergÃ­as Renovables S.L.">Soltec EnergÃ­as
+                <option value="Soltec EnergÃ­as Renovables S.L.">Soltec EnergÃ­as Renovables S.L.</option>
+                <option value="SociÃ©tÃ© des Produits NestlÃ© S.A. - Nestec SA">SociÃ©tÃ© des Produits NestlÃ© S.A. - Nestec SA</option>
+                <option value="SoftwareONE">SoftwareONE</option>
+                <option value="Synthomer">Synthomer</option>
+                <option value="TUBACEX">TUBACEX</option>
+                <option value="UMECast">UMECast</option>
+                <option value="Unicaja Banco S.A.">Unicaja Banco S.A.</option>
+                <option value="Universitat PolitÃ©cnica De Catalunya">Universitat PolitÃ©cnica De Catalunya</option>
+                <option value="University of Northumbria">University of Northumbria</option>
+                <option value="Velten GmbH">Velten GmbH</option>
+                <option value="VISCOFAN">VISCOFAN</option>
+                <option value="WTV">WTV</option>
+                <option value="Wolters Kluwer NV">Wolters Kluwer NV</option>
+            </select>    
             </div>
             <div class="input-group" id="proposalGroup" style="display:none;">
                 <label for="proposal">* Proposal</label>
