--- a/templates/index.html
+++ b/templates/index.html
@@ -274,7 +274,7 @@
                     <option value="Marketing - ABC">Marketing - ABC</option>
                 </select>
             </div>
-            <div class="input-group" id="accountGroup">
+            <div class="input-group" id="accountGroup"style="display:none;">
             <label for="account">Account</label>
             <select name="Account__c" id="account">
                 <option value="Acciona S.A.">Acciona S.A.</option>
