--- a/templates/index.html
+++ b/templates/index.html
@@ -13,24 +13,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: #e7e7e7; /* Set background color to white */
             overflow: hidden;
-        }
-
-        .video-background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: -1;
-        }
-
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
         }
 
         .container {
@@ -166,11 +150,6 @@
     </style>
 </head>
 <body>
-    <div class="video-background">
-        <video autoplay loop muted>
-            <source src="https://videos.pexels.com/video-files/18069235/18069235-uhd_2560_1440_24fps.mp4" type="video/mp4">
-        </video>
-    </div>
     <div class="container">
         <img src="https://wtvglobal.com/wp-content/uploads/2022/05/footer-logo-color.png" alt="Logo" class="logo">
         <h1>New Timesheet</h1>
@@ -274,7 +253,7 @@
                     <option value="Marketing - ABC">Marketing - ABC</option>
                 </select>
             </div>
-            <div class="input-group" id="accountGroup"style="display:none;">
+            <div class="input-group" id="accountGroup" style="display:none;">
             <label for="account">Account</label>
             <select name="Account__c" id="account">
                 <option value="Acciona S.A.">Acciona S.A.</option>
@@ -379,7 +358,6 @@
                 <option value="SFL Management ( Bermuda) Limited">SFL Management ( Bermuda) Limited</option>
                 <option value="Siemens Gamesa CorporaciÃ³n TecnolÃ³gica S.A.">Siemens Gamesa CorporaciÃ³n TecnolÃ³gica S.A.</option>
                 <option value="Solaria EnergÃ­a y Medio Ambiente">Solaria EnergÃ­a y Medio Ambiente</option>
-                <option value="Soltec EnergÃ­as Renovables S.L.">Soltec EnergÃ­as
                 <option value="Soltec EnergÃ­as Renovables S.L.">Soltec EnergÃ­as Renovables S.L.</option>
                 <option value="SociÃ©tÃ© des Produits NestlÃ© S.A. - Nestec SA">SociÃ©tÃ© des Produits NestlÃ© S.A. - Nestec SA</option>
                 <option value="SoftwareONE">SoftwareONE</option>
@@ -457,4 +435,4 @@
         }
     </script>
 </body>
-</html>
+</html> 
