--- a/templates/index.html
+++ b/templates/index.html
@@ -254,8 +254,10 @@
                 </select>
             </div>
             <div class="input-group" id="accountGroup" style="display:none;">
-            <label for="account">Account</label>
-            <select name="Account__c" id="account">
+    <label for="account">Account</label>
+    <select name="Account__c" id="account">
+        <option value="" disabled selected>--Select account--</option>
+                <option value="Acciona S.A.">None</option>
                 <option value="Acciona S.A.">Acciona S.A.</option>
                 <option value="ACERINOX">ACERINOX</option>
                 <option value="African Child Policy Forum">African Child Policy Forum</option>
@@ -435,4 +437,4 @@
         }
     </script>
 </body>
-</html> 
+</html>
