--- a/templates/index.html
+++ b/templates/index.html
@@ -257,7 +257,7 @@
     <label for="account">Account</label>
     <select name="Account__c" id="account">
         <option value="" disabled selected>--Select account--</option>
-                <option value="Acciona S.A.">None</option>
+                <option value="None">None</option>
                 <option value="Acciona S.A.">Acciona S.A.</option>
                 <option value="ACERINOX">ACERINOX</option>
                 <option value="African Child Policy Forum">African Child Policy Forum</option>
