--- a/templates/index.html
+++ b/templates/index.html
@@ -13,20 +13,23 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #e7e7e7; /* Set background color to white */
+            background-image: url('https://previews.123rf.com/images/sonyae/sonyae0812/sonyae081200042/4053055-clear-blue-bubbles-floating-against-white-background.jpg'); /* Set background image */
+            background-size: cover; /* Make the image cover the entire background */
+            background-position: center; /* Center the image */
+            background-repeat: no-repeat; /* Prevent the image from repeating */
             overflow: hidden;
         }
 
         .container {
-            background-color: rgba(255, 255, 255, 0.9);
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px;
-            width: 100%;
-            margin: 0 auto;
-            z-index: 1;
-            position: relative;
+        background-color: rgba(255, 255, 255, 0.9); /* Keep the background of the form white with some transparency */
+        padding: 40px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 600px;
+        width: 100%;
+        margin: 0 auto;
+        z-index: 1;
+        position: relative;
         }
 
         form {
