--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('https://previews.123rf.com/images/sonyae/sonyae0812/sonyae081200042/4053055-clear-blue-bubbles-floating-against-white-background.jpg'); /* Set background image */
+            background-image: url('https://static4.depositphotos.com/1011415/285/v/450/depositphotos_2855091-stock-illustration-bubbles.jpg'); /* Set background image */
             background-size: cover; /* Make the image cover the entire background */
             background-position: center; /* Center the image */
             background-repeat: no-repeat; /* Prevent the image from repeating */
