--- a/templates/index.html
+++ b/templates/index.html
@@ -13,23 +13,20 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('https://static4.depositphotos.com/1011415/285/v/450/depositphotos_2855091-stock-illustration-bubbles.jpg'); /* Set background image */
-            background-size: cover; /* Make the image cover the entire background */
-            background-position: center; /* Center the image */
-            background-repeat: no-repeat; /* Prevent the image from repeating */
+            background-color: #e7e7e7; /* Set background color to white */
             overflow: hidden;
         }
 
         .container {
-        background-color: rgba(255, 255, 255, 0.9); /* Keep the background of the form white with some transparency */
-        padding: 40px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        max-width: 600px;
-        width: 100%;
-        margin: 0 auto;
-        z-index: 1;
-        position: relative;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
+            margin: 0 auto;
+            z-index: 1;
+            position: relative;
         }
 
         form {
