--- a/templates/index.html
+++ b/templates/index.html
@@ -198,6 +198,7 @@
                     <option value="Peter Sibley"> 
                     <option value="Jorge polo"> 
                     <option value="Ruth Buenaposada"> 
+                    <option value="Ronald Fung"> 
                     <option value="Samuel Gomez"> 
                     <option value="Tim East"> 
                     <option value="Rodrigo Torres"> 
