--- a/templates/index.html
+++ b/templates/index.html
@@ -182,6 +182,7 @@
                     <option value="Fernando Onrubia"> 
                     <option value="Johnathan Nobrega"> 
                     <option value="Josh Tuveri"> 
+                    <option value="Joey Heaton">     
                     <option value="Katerina Paraschou"> 
                     <option value="Kinyat yeung"> 
                     <option value="Katie Craske"> 
