--- a/templates/index.html
+++ b/templates/index.html
@@ -193,6 +193,7 @@
                     <option value="Marcos de Castro"> 
                     <option value="Mario Benita"> 
                     <option value="Marzena Kufel"> 
+                    <option value="Miranda Counsell"> 
                     <option value="Michael Williamson"> 
                     <option value="Nick Owen"> 
                     <option value="Olivia Pinkarchevski"> 
